# vibecore_audio

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/audio_editor/domain/: audio_track.py  project.py
src/audio_editor/services/: audio_engine.py
src/audio_editor/ui/: main_window.py  styles.py  waveform_widget.py
src/audio_editor/use_cases/: add_track_to_project.py  create_empty_track.py  delete_track_from_project.py  play_project.py  rename_track.py  start_recording.py  stop_recording.py
tests/ui/: test_waveform_widget.py
tests/use_cases/: test_create_empty_track.py
