[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecore-audio"
version = "0.1.0"
description = "Modern audio editor"
authors = [{name = "Shoombii"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "PySide6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
